--- a/build.yaml
+++ b/build.yaml
@@ -184,16 +184,15 @@ include:
 
   # Xiao_Dongle
   - board: seeeduino_xiao_ble
-    shield: sofle_dongle_xiao oled_adapter_seeeduino_xiao_ble_128x64 dongle_display
+    shield: sofle_dongle_xiao oled_adapter_seeeduino_xiao_ble_128x64
     cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"SofleDongle_X\" -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_IDLE_TIMEOUT=60000
     artifact-name: xiao_sofle_dongle_xiao_oled
     snippet: studio-rpc-usb-uart
-
-  # ProMicro_Dongle
+  # ProMicro_Dongle (dongle_display removed)
   - board: nice_nano_v2
-    shield: sofle_dongle_pro_micro dongle_display
+    shield: sofle_dongle_pro_micro
     cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"SofleDongle_P\"  -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_SLEEP=n -DCONFIG_ZMK_IDLE_TIMEOUT=60000
-    artifact-name: nice_sofle_dongle_oled
+    artifact-name: nice_sofle_dongle
     snippet: studio-rpc-usb-uart
   ### SOFLEV2 SOFLEV1 SOFLEPLUS END ###
 
@@ -217,16 +216,16 @@ include:
 
   # Xiao_Dongle
   - board: seeeduino_xiao_ble
-    shield: lily58_dongle_xiao oled_adapter_seeeduino_xiao_ble_128x64 dongle_display
+    shield: lily58_dongle_xiao oled_adapter_seeeduino_xiao_ble_128x64
     cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"lily58Dongle_X\" -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_IDLE_TIMEOUT=60000
     artifact-name: xiao_lily58_dongle_xiao_oled
     snippet: studio-rpc-usb-uart
 
-  # ProMicro_Dongle
+  # ProMicro_Dongle (dongle_display removed)
   - board: nice_nano_v2
-    shield: lily58_dongle_pro_micro dongle_display
+    shield: lily58_dongle_pro_micro
     cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"lily58Dongle_P\"  -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_SLEEP=n -DCONFIG_ZMK_IDLE_TIMEOUT=60000
-    artifact-name: nice_lily58_dongle_oled
+    artifact-name: nice_lily58_dongle
     snippet: studio-rpc-usb-uart
   ### LILY58 END ###
 
@@ -250,16 +249,16 @@ include:
 
   # Xiao_Dongle
   - board: seeeduino_xiao_ble
-    shield: splitkb_aurora_sofle_dongle_xiao oled_adapter_seeeduino_xiao_ble_128x64 dongle_display
+    shield: splitkb_aurora_sofle_dongle_xiao oled_adapter_seeeduino_xiao_ble_128x64
     cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"A_SofleDongle_X\" -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_IDLE_TIMEOUT=60000
     artifact-name: xiao_splitkb_aurora_sofle_dongle_xiao_oled
     snippet: studio-rpc-usb-uart
 
-  # ProMicro_Dongle
+  # ProMicro_Dongle (dongle_display removed)
   - board: nice_nano_v2
-    shield: splitkb_aurora_sofle_dongle_pro_micro dongle_display
+    shield: splitkb_aurora_sofle_dongle_pro_micro
     cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"A_SofleDongle_P\"  -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_SLEEP=n -DCONFIG_ZMK_IDLE_TIMEOUT=60000
-    artifact-name: nice_splitkb_aurora_sofle_dongle_oled
+    artifact-name: nice_splitkb_aurora_sofle_dongle
     snippet: studio-rpc-usb-uart
   ### SPLITKB AURORA SOFLE END ###
 
