--- a/config/west.yml
+++ b/config/west.yml
@@ -5,6 +5,9 @@ manifest:
     # dongle_display
     - name: englmaxi
       url-base: https://github.com/englmaxi
+    # nice_view_gem
+    - name: m165437
+      url-base: https://github.com/M165437
     # nice_oled - nice_epaper - dongle_display!view - oled Adapter
     - name: mctechnology17
       url-base: https://github.com/mctechnology17
@@ -16,6 +19,10 @@ manifest:
     # dongle_display
     - name: zmk-dongle-display
       remote: englmaxi
+      revision: main
+    # nice_view_gem
+    - name: nice-view-gem
+      remote: m165437
       revision: main
     # nice_oled - nice_epaper
     - name: zmk-nice-oled
