feat: enable modifiers widget and update README documentation

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -99,9 +99,22 @@ CONFIG_ZMK_STUDIO_LOCKING=n
 ### OLED DISPLAY
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
-# esto creo que ya no es necesario
-# CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
-# CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+
+### ANIMATION SETTINGS
+# Master side (Central) - Select one
+CONFIG_NICE_OLED_WIDGET_WPM_LUNA=y
+CONFIG_NICE_OLED_WIDGET_WPM_BONGO_CAT=n
+CONFIG_NICE_OLED_WIDGET_WPM_SPEEDOMETER=n
+
+# Peripheral side - Select one
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_GEM=y
+# CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_CAT=n
+
+### MODIFIERS WIDGET
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS=y
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED=y
+# CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_SYMBOL=y
+# CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_FIXED_LETTER=n
 
 ### WIDGET SETTINGS
 # No Widget configurations added since nice!view has its own custom widgets
