feat: show WPM number alongside Luna

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -102,6 +102,8 @@ CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 
 ### ANIMATION SETTINGS
 # Master side (Central) - Select one
+CONFIG_NICE_OLED_WIDGET_WPM=y
+CONFIG_NICE_OLED_WIDGET_WPM_NUMBER=y
 CONFIG_NICE_OLED_WIDGET_WPM_LUNA=y
 CONFIG_NICE_OLED_WIDGET_WPM_BONGO_CAT=n
 # CONFIG_NICE_OLED_WIDGET_WPM_SPEEDOMETER=y
