fix: enable e-paper specific widgets and status info

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -101,7 +101,12 @@ CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 
 ### ANIMATION SETTINGS
-# Master side (Central) - Select one
+# nice!view (e-paper) compatibility
+CONFIG_NICE_EPAPER_ON=y
+
+# Master side (Central) - Widgets
+CONFIG_NICE_OLED_WIDGET_STATUS=y
+CONFIG_NICE_OLED_WIDGET_LAYER=y
 CONFIG_NICE_OLED_WIDGET_WPM=y
 CONFIG_NICE_OLED_WIDGET_WPM_NUMBER=y
 CONFIG_NICE_OLED_WIDGET_WPM_LUNA=y
