feat: enable WPM graph to show typing fluctuations

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -109,6 +109,7 @@ CONFIG_NICE_OLED_WIDGET_STATUS=y
 CONFIG_NICE_OLED_WIDGET_LAYER=y
 CONFIG_NICE_OLED_WIDGET_WPM=y
 CONFIG_NICE_OLED_WIDGET_WPM_NUMBER=y
+CONFIG_NICE_OLED_WIDGET_WPM_GRAPH=y
 CONFIG_NICE_OLED_WIDGET_WPM_LUNA=y
 CONFIG_NICE_OLED_WIDGET_WPM_BONGO_CAT=n
 # CONFIG_NICE_OLED_WIDGET_WPM_SPEEDOMETER=y
