--- a/config/corne.conf
+++ b/config/corne.conf
@@ -114,6 +114,9 @@ CONFIG_NICE_OLED_WIDGET_WPM_LUNA=y
 CONFIG_NICE_OLED_WIDGET_WPM_BONGO_CAT=n
 # CONFIG_NICE_OLED_WIDGET_WPM_SPEEDOMETER=y
 
+# Peripheral Specific Animations/Widgets
+CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_SMART_BATTERY=y
+
 # Peripheral side - Select one
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_SPACEMAN=y
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_HEAD=n
@@ -142,6 +145,10 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
 ### Improves compatibility with iPad
 # ref: https://zmk.dev/docs/config/system#hid
 CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
+
+### RAW HID & MEDIA INFO
+CONFIG_NICE_OLED_WIDGET_RAW_HID=y
+CONFIG_NICE_OLED_WIDGET_RAW_HID_MEDIA_PLAYER_SPOTIFY_MACOS=y
 
 ### DEBUG OPTIONS
 # CONFIG_ZMK_USB_LOGGING=y
