fix: add missing animation duration flag for smart battery

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -116,6 +116,7 @@ CONFIG_NICE_OLED_WIDGET_WPM_BONGO_CAT=n
 
 # Peripheral Specific Animations/Widgets
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_SMART_BATTERY=y
+CONFIG_NICE_OLED_GEM_ANIMATION_MS=2400
 
 # Peripheral side - Select one
 CONFIG_NICE_OLED_WIDGET_ANIMATION_PERIPHERAL_SPACEMAN=y
