fix: restore BAS/LOW/RAI labels and fix right-side build naming

--- a/config/knucklehead/Fn.dtsi
+++ b/config/knucklehead/Fn.dtsi
@@ -7,7 +7,7 @@
     compatible = "zmk,keymap";
 
     fn_layer {
-      display-name = "Fn";
+      display-name = "RAI";
       bindings = <
 // ╭───────────────┬───────────────┬───────────────┬───────────────┬───────────────┬───────────────╮   ╭───────────────┬───────────────┬───────────────┬───────────────┬───────────────┬───────────────╮
 // │0              │1              │2              │3              │4              │5              │   │6              │7              │8              │9              │10             │11             │
