--- a/build.yaml
+++ b/build.yaml
@@ -64,6 +64,7 @@ include:
     snippet: studio-rpc-usb-uart
   - board: nice_nano_v2
     shield: corne_right nice_view_adapter nice_epaper
+    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Nice_Corne_View\"
     artifact-name: nice_corne_right_view
 
     # puchi_ble_v1 + nice_epaper
@@ -74,6 +75,7 @@ include:
     snippet: studio-rpc-usb-uart
   - board: puchi_ble_v1
     shield: corne_right nice_view_adapter nice_epaper
+    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Puchi_Corne_V\"
     artifact-name: puchi_corne_right_view
 
     # peripheral_left + nice_nano_v2 + nice_epaper
@@ -96,6 +98,7 @@ include:
     snippet: studio-rpc-usb-uart
   - board: nice_nano_v2
     shield: corne_right nice_oled
+    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Nice_Corne_Oled\"
     artifact-name: nice_corne_right_oled
 
     # puchi_ble_v1 + nice_oled
@@ -106,6 +109,7 @@ include:
     snippet: studio-rpc-usb-uart
   - board: puchi_ble_v1
     shield: corne_right nice_oled
+    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Puchi_Corne_O\"
     artifact-name: puchi_corne_right_oled
 
     # peripheral_left + nice_nano_v2 + nice_oled
