--- a/config/knucklehead/L1_qwerty.dtsi
+++ b/config/knucklehead/L1_qwerty.dtsi
@@ -7,7 +7,7 @@
     compatible = "zmk,keymap";
 
     qwerty_layer {
-      display-name = "L1";
+      display-name = "BAS";
       bindings = <
 // ╭───────────────┬───────────────┬───────────────┬───────────────┬───────────────┬───────────────╮   ╭───────────────┬───────────────┬───────────────┬───────────────┬───────────────┬───────────────╮
 // │0              │1              │2              │3              │4              │5              │   │6              │7              │8              │9              │10             │11             │
