--- a/config/knucklehead/LOW.dtsi
+++ b/config/knucklehead/LOW.dtsi
@@ -20,7 +20,7 @@
     &trans          &trans          &trans          &trans          &trans          &trans              &trans          &trans          &trans          &trans          &trans          &trans
 // ╰───────────────┴───────────────┴───────────────┼───────────────┼───────────────┼───────────────┤   ├───────────────├───────────────┼───────────────┼───────────────┴───────────────┴───────────────╯
 //                                                 │36             │37             │38             │   │39             │40             │41             │
-                                                    &trans          &trans          &cmo L2             &cmo L2         &trans          &trans
+                                                    &trans          &trans          &cmo LOW             &cmo LOW         &trans          &trans
 //                                                 ╰───────────────┴───────────────┴───────────────╯   ╰───────────────┴───────────────┴───────────────╯
       >;
     };
