--- a/config/knucklehead/BAS_qwerty.dtsi
+++ b/config/knucklehead/BAS_qwerty.dtsi
@@ -1,26 +1,26 @@
 /**
- * Function / System Layer
+ * Alpha Layer - QWERTY
  */
 
 / {
   keymap {
     compatible = "zmk,keymap";
 
-    fn_layer {
-      display-name = "RAI";
+    qwerty_layer {
+      display-name = "BAS";
       bindings = <
 // ╭───────────────┬───────────────┬───────────────┬───────────────┬───────────────┬───────────────╮   ╭───────────────┬───────────────┬───────────────┬───────────────┬───────────────┬───────────────╮
 // │0              │1              │2              │3              │4              │5              │   │6              │7              │8              │9              │10             │11             │
-    &out OUT_TOG    &kp F1          &kp F2          &kp F3          &kp F4          &kp F5              &trans          &trans          &trans          &trans          &trans          &kp C_POWER
+    &kp ESC         &kp Q           &kp W           &kp E           &kp R           &kp T               &kp Y           &kp U           &kp I           &kp O           &kp P           &kp K_CANCEL
 // ├───────────────├───────────────┼───────────────┼───────────────┼───────────────┼───────────────┤   ├───────────────├───────────────┼───────────────┼───────────────┼───────────────┼───────────────┤
 // │12             │13             │14             │15             │16             │17             │   │18             │19             │20             │21             │22             │23             │
-    &rst_boot 0 0   &kp F6          &hrml LCTRL F7  &hrml LALT F8   &hrml LCMD F9   &hrml MEH F10       &trans          &trans          &trans          &trans          &trans          &rst_boot 0 0
+    &bkspc_del      &kp A           &hrml LCTRL S   &hrml LALT D    &hrml LCMD F    &hrml MEH G         &hrmr MEH H     &hrmr LCMD J    &hrmr LALT K    &hrmr LCTRL L   &kp SQT         &kp ENTER
 // ├───────────────├───────────────┼───────────────┼───────────────┼───────────────┼───────────────┤   ├───────────────├───────────────┼───────────────┼───────────────┼───────────────┼───────────────┤
 // │24             │25             │26             │27             │28             │29             │   │30             │31             │32             │33             │34             │35             │
-    &cmo Fn         &kp F11         &kp F12         &kp F13         &kp F14         &kp F15             &trans          &trans          &trans          &trans          &trans          &cmo Fn
+    &csl RAI         &kp Z           &kp X           &kp C           &kp V           &kp B               &kp N           &kp M           &kp COMMA       &kp DOT         &kp SEMICOLON   &csl RAI
 // ╰───────────────┴───────────────┴───────────────┼───────────────┼───────────────┼───────────────┤   ├───────────────├───────────────┼───────────────┼───────────────┴───────────────┴───────────────╯
 //                                                 │36             │37             │38             │   │39             │40             │41             │
-                                                    &kp C_BRI_DN    &kp C_BRI_UP    &cmo L2             &cmo L2         &kp CAPSLOCK    &trans
+                                                    &kp TAB         &mt LSHFT SPACE &smart_num LOW 0     &smart_num LOW 0 &smart_shift    &kp GRAVE
 //                                                 ╰───────────────┴───────────────┴───────────────╯   ╰───────────────┴───────────────┴───────────────╯
       >;
     };
