--- a/config/knucklehead/combos.dtsi
+++ b/config/knucklehead/combos.dtsi
@@ -23,36 +23,36 @@
 
     /* Symbols */
     // Left
-    COMBO(excl, &kp EXCL, 1 13, L1 L2, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
-    COMBO(at, &kp AT, 2 14, L1 L2, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
-    COMBO(hash, &kp HASH, 3 15, L1 L2, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
-    COMBO(dollar, &kp DOLLAR, 4 16, L1 L2, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
-    COMBO(percent, &kp PERCENT, 5 17, L1 L2, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
-    COMBO(caret, &kp CARET, 13 25, L1 L2, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
-    COMBO(ampersand, &kp AMPERSAND, 14 26, L1 L2, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
-    COMBO(star, &kp STAR, 15 27, L1 L2, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
-    COMBO(lpar, &kp LPAR, 16 28, L1 L2, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
-    COMBO(rpar, &kp RPAR, 17 29, L1 L2, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
+    COMBO(excl, &kp EXCL, 1 13, BAS LOW, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
+    COMBO(at, &kp AT, 2 14, BAS LOW, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
+    COMBO(hash, &kp HASH, 3 15, BAS LOW, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
+    COMBO(dollar, &kp DOLLAR, 4 16, BAS LOW, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
+    COMBO(percent, &kp PERCENT, 5 17, BAS LOW, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
+    COMBO(caret, &kp CARET, 13 25, BAS LOW, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
+    COMBO(ampersand, &kp AMPERSAND, 14 26, BAS LOW, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
+    COMBO(star, &kp STAR, 15 27, BAS LOW, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
+    COMBO(lpar, &kp LPAR, 16 28, BAS LOW, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
+    COMBO(rpar, &kp RPAR, 17 29, BAS LOW, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
 
     // Right
-    COMBO(minus, &kp MINUS, 7 19, L1 L2 Fn, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
-    COMBO(equal, &kp EQUAL, 8 20, L1 L2 Fn, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
-    COMBO(slash, &kp SLASH, 9 21, L1 L2 Fn, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
-    COMBO(pgup, &kp PG_UP, 6 18, L1 L2 Fn, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
-    COMBO(pgdn, &kp PG_DN, 18 30, L1 L2 Fn, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
-    COMBO(lbkt, &kp LBKT, 19 31, L1 L2 Fn, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
-    COMBO(rbkt, &kp RBKT, 20 32, L1 L2 Fn, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
-    COMBO(backslash, &kp BACKSLASH, 21 33, L1 L2 Fn, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
+    COMBO(minus, &kp MINUS, 7 19, BAS LOW RAI, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
+    COMBO(equal, &kp EQUAL, 8 20, BAS LOW RAI, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
+    COMBO(slash, &kp SLASH, 9 21, BAS LOW RAI, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
+    COMBO(pgup, &kp PG_UP, 6 18, BAS LOW RAI, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
+    COMBO(pgdn, &kp PG_DN, 18 30, BAS LOW RAI, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
+    COMBO(lbkt, &kp LBKT, 19 31, BAS LOW RAI, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
+    COMBO(rbkt, &kp RBKT, 20 32, BAS LOW RAI, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
+    COMBO(backslash, &kp BACKSLASH, 21 33, BAS LOW RAI, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
 
     /* Bluetooth */
-    COMBO(bt_clear, &bt BT_CLR, 1 2 3 4, Fn, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
-    COMBO(bt_sel_0, &bt BT_SEL 0, 1 13, Fn, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
-    COMBO(bt_sel_1, &bt BT_SEL 1, 2 14, Fn, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
-    COMBO(bt_sel_2, &bt BT_SEL 2, 3 15, Fn, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
-    COMBO(bt_sel_3, &bt BT_SEL 3, 4 16, Fn, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
-    COMBO(bt_sel_4, &bt BT_SEL 4, 5 17, Fn, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
+    COMBO(bt_clear, &bt BT_CLR, 1 2 3 4, RAI, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
+    COMBO(bt_sel_0, &bt BT_SEL 0, 1 13, RAI, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
+    COMBO(bt_sel_1, &bt BT_SEL 1, 2 14, RAI, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
+    COMBO(bt_sel_2, &bt BT_SEL 2, 3 15, RAI, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
+    COMBO(bt_sel_3, &bt BT_SEL 3, 4 16, RAI, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
+    COMBO(bt_sel_4, &bt BT_SEL 4, 5 17, RAI, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
 
     /* Media */
-    COMBO(play, &kp C_PP, 6 7, L1 L2 Fn, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
+    COMBO(play, &kp C_PP, 6 7, BAS LOW RAI, COMBO_TERM_DEFAULT, COMBO_QUICK_TAP_MS)
   };
 };
