--- a/keymap-drawer/combos.yaml
+++ b/keymap-drawer/combos.yaml
@@ -1,7 +1,7 @@
 combos:
   - p: [16, 17]
     k: { t: $$mdi:star-four-points$$ }
-    l: [L1, L2, Fn]
+    l: [BAS, LOW, RAI]
   - p: [18, 19]
     k: { t: $$mdi:star-four-points$$ }
-    l: [L1, L2, Fn]
+    l: [BAS, LOW, RAI]
