--- a/build.yaml
+++ b/build.yaml
@@ -1,23 +1,16 @@
-# ========================================
+# =========================================
 # FileName: build.yaml
-# Date: 07.06.2023
-# Author: Marcos Chow Castro
-# Email: mctechnology170318@gmail.com
-# GitHub: https://github.com/mctechnology17
+# Editor: SED
 # Brief: configuration file for ZMK firmware
 # Board: nice_nano_v2
-# shield: corne_left nice_view_adapter nice_view,
-#         corne_right nice_view_adapter nice_view,
-#         corne_left, corne_right and settings_reset
 # =========================================
-#                              ╔═╦═╦═╗
-#                       ╔════╗ ║║║║║╔╝
-#                       ║╔╗╔╗║ ║║║║║╚╗
-#                       ╚╝║║╚╝ ║╠═╩╩═╝
-#                         ║╠═╦═╣╚╦═╦╦═╦╗╔═╦═╦╦╗
-#                         ║║╩╣═╣║║║║║╬║╚╣╬║╬║║║
-#                         ╚╩═╩═╩╩╩╩═╩═╩═╩═╬╗╠╗║
-#                                         ╚═╩═╝
+#
+#                             ╔═══╗╔═══╗╔══╗
+#                             ║╔══╝║╠══╝║║ ╚╗
+#                             ╚══╗ ║╠══╝║║ ║║
+#                             ╔══╝ ║╠══╝║║ ╔╝
+#                             ╚═══╝╚═══╝╚══╝
+#
 # This file generates the GitHub Actions matrix
 # For simple board + shield combinations, add them
 # to the top level board and shield arrays, for more
@@ -55,8 +48,6 @@
 include:
 
   ### CORNE START ###
-    ### nice_view START ###
-    # nice_nano_v2 + nice_epaper
   - board: nice_nano_v2
     shield: corne_left nice_view_adapter nice_epaper
     cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Nice_Corne_View\"
@@ -65,103 +56,6 @@ include:
   - board: nice_nano_v2
     shield: corne_right nice_view_adapter nice_epaper
     artifact-name: nice_corne_right_view
-
-    # puchi_ble_v1 + nice_epaper
-  - board: puchi_ble_v1
-    shield: corne_left nice_view_adapter nice_epaper
-    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Puchi_Corne_V\"
-    artifact-name: puchi_corne_left_view
-    snippet: studio-rpc-usb-uart
-  - board: puchi_ble_v1
-    shield: corne_right nice_view_adapter nice_epaper
-    artifact-name: puchi_corne_right_view
-
-    # peripheral_left + nice_nano_v2 + nice_epaper
-  - board: nice_nano_v2
-    shield: corne_left_peripheral nice_view_adapter nice_epaper
-    artifact-name: nice_corne_left_peripheral_view
-
-    # peripheral_left + puchi_ble_v1 + nice_epaper
-  - board: puchi_ble_v1
-    shield: corne_left_peripheral nice_view_adapter nice_epaper
-    artifact-name: puchi_corne_left_peripheral_view
-    ### nice_view END ###
-
-    ### nice_oled START ###
-    # nice_nano_v2 + nice_oled
-  - board: nice_nano_v2
-    shield: corne_left nice_oled
-    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Nice_Corne_Oled\"
-    artifact-name: nice_corne_left_oled
-    snippet: studio-rpc-usb-uart
-  - board: nice_nano_v2
-    shield: corne_right nice_oled
-    artifact-name: nice_corne_right_oled
-
-    # puchi_ble_v1 + nice_oled
-  - board: puchi_ble_v1
-    shield: corne_left nice_oled
-    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Puchi_Corne_O\"
-    artifact-name: puchi_corne_left_oled
-    snippet: studio-rpc-usb-uart
-  - board: puchi_ble_v1
-    shield: corne_right nice_oled
-    artifact-name: puchi_corne_right_oled
-
-    # peripheral_left + nice_nano_v2 + nice_oled
-  - board: nice_nano_v2
-    shield: corne_left_peripheral nice_oled
-    artifact-name: nice_corne_left_peripheral_oled
-
-    # peripheral_left + puchi_ble_v1 + nice_oled
-  - board: puchi_ble_v1
-    shield: corne_left_peripheral nice_oled
-    artifact-name: puchi_corne_left_peripheral_oled
-    ### nice_oled END ###
-
-    ### Xiao_Dongle START ###
-  - board: seeeduino_xiao_ble
-    shield: corne_dongle_xiao
-    #  -DCONFIG_ZMK_USB=y  -DCONFIG_ZMK_BLE=y
-    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Xiao_Dongle\" -DCONFIG_ZMK_STUDIO=y
-    artifact-name: xiao_corne_dongle
-    snippet: studio-rpc-usb-uart
-    ### Xiao_Dongle END ###
-
-    ### ProMicro_Dongle START ###
-    # nice_nano_v2 dongle
-  - board: nice_nano_v2
-    shield: corne_dongle_pro_micro
-    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Nice_Dongle\"
-    artifact-name: nice_corne_dongle_pro_micro
-    snippet: studio-rpc-usb-uart
-  - board: puchi_ble_v1
-    shield: corne_dongle_pro_micro
-    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Puchi_Dongle\"
-    artifact-name: puchi_corne_dongle
-    snippet: studio-rpc-usb-uart
-    # snippet: zmk-usb-logging
-  - board: puchi_ble_v1
-    shield: corne_dongle_pro_micro nice_view_adapter nice_epaper
-    #  -DCONFIG_ZMK_USB=y  -DCONFIG_ZMK_BLE=y
-    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Puchi_Dongle_V\"  -DCONFIG_ZMK_STUDIO=y
-    snippet: studio-rpc-usb-uart
-    artifact-name: puchi_corne_dongle_view
-    # snippet: zmk-usb-logging
-    ### Pro Micro END ###
-
-    ### ProMicro_Dongle START ###
-    # NICE x PUCHI and nice_oled + rgb
-  - board: nice_nano_v2
-    shield: corne_left nice_oled
-    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Corne_Oled_RGB\"
-    artifact-name: nice_corne_left_oled_rgb
-    snippet: rgb-config studio-rpc-usb-uart
-  - board: puchi_ble_v1
-    shield: corne_right nice_oled
-    snippet: rgb-config
-    artifact-name: puchi_corne_right_oled_rgb
-    ### Pro Micro END ###
   ### CORNE END ###
 
   ### SETTINGS_RESET START ###
