--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,37 +1,16 @@
-# ========================================
-# FileName: corne.conf
-# Date: 07.06.2023
-# Author: Marcos Chow Castro
-# Email: mctechnology170318@gmail.com
-# GitHub: https://github.com/mctechnology17
-# Brief: configuration file for ZMK firmware
-# Board: nice_nano_v2 and puchi_ble_v1
-#                              ╔═╦═╦═╗
-#                       ╔════╗ ║║║║║╔╝
-#                       ║╔╗╔╗║ ║║║║║╚╗
-#                       ╚╝║║╚╝ ║╠═╩╩═╝
-#                         ║╠═╦═╣╚╦═╦╦═╦╗╔═╦═╦╦╗
-#                         ║║╩╣═╣║║║║║╬║╚╣╬║╬║║║
-#                         ╚╩═╩═╩╩╩╩═╩═╩═╩═╬╗╠╗║
-#                                         ╚═╩═╝
-# Copyright (c) 2020 The ZMK Contributors
-# SPDX-License-Identifier: MIT
 # =========================================
-# on config_zmk.h file enable/disable the following options, if you want to
-# use CONFIG_ZMK_MOUSE=y, CONFIG_ZMK_RGB_UNDERGLOW=y, CONFIG_ZMK_RGB_UNDERGLOW=y
-# mouse config, 1 = enable, 0 = disable, default = 1
-# 2 = enable, but with rgb matrix
-# #define MC_TECHNOLOGY_MOUSE_ENABLE 1
-# rgb matrix config, 1 = enable, 0 = disable, default = 0
-# #define MC_TECHNOLOGY_RGB_ENABLE 0
-# define macros on for .dtsi file 1 = enable, 0 = disable default = 1
-# #define MC_TECHNOLOGY_MACROS_ENABLE 1
-
-### Keyboard name
-# CONFIG_ZMK_KEYBOARD_NAME="Nice Corne View"
-# CONFIG_ZMK_KEYBOARD_NAME="Puchi Corne View"
-# CONFIG_ZMK_KEYBOARD_NAME="Nice Corne Oled"
-# CONFIG_ZMK_KEYBOARD_NAME="Puchi Corne Oled"
+# FileName: corne.conf
+# Editor: SED
+# Brief: configuration file for ZMK firmware
+# Board: nice_nano_v2
+# =========================================
+#
+#                             ╔═══╗╔═══╗╔══╗
+#                             ║╔══╝║╠══╝║║ ╚╗
+#                             ╚══╗ ║╠══╝║║ ║║
+#                             ╔══╝ ║╠══╝║║ ╔╝
+#                             ╚═══╝╚═══╝╚══╝
+#
 
 ### Boost Bluetooth TX power, also make Bluetooth stronger
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
@@ -63,38 +42,9 @@ CONFIG_ZMK_EXT_POWER=y
 # CONFIG_ZMK_MOUSE=y
 
 ### ZMK STUDIO
-# MC: 2. zmk-studio test START
 # https://github.com/zmkfirmware/zmk/blob/main/docs/docs/config/studio.md
 CONFIG_ZMK_STUDIO=y
 CONFIG_ZMK_STUDIO_LOCKING=n
-# MC: zmk-studio test END
-
-### RGB UNDERGLOW
-# uncomment to enable RGB Underglow or backlight
-# CONFIG_ZMK_RGB_UNDERGLOW=y
-# CONFIG_WS2812_STRIP=y
-# apaga si no se usa el teclado
-# CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
-# 0	Solid color    1 Breathe     2	Spectrum     3	Swirl
-# CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3
-# nivel de brillo en porcentaje, el valor por defecto es 10 por ciento
-# CONFIG_ZMK_RGB_UNDERGLOW_BRT_STEP=1
-# Turn off RGB underglow when keyboard goes into idle state
-# CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
-
-# # Hue step in degrees (0-359) used by RGB actions default 10
-# CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=30
-
-# # Brightness step in percent used by RGB actions default 10
-# CONFIG_ZMK_RGB_UNDERGLOW_SAT_STEP=2
-# CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=240
-# CONFIG_ZMK_RGB_UNDERGLOW_SAT_START=10
-# CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=15
-
-# Uncomment the line below to disable external power toggling by the underglow.
-# By default toggling the underglow on and off also toggles external power
-# on and off. This also causes the display to turn off.
-# CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 
 ### OLED DISPLAY
 CONFIG_ZMK_DISPLAY=y
